Avance con los paquetes de model y repository. Creadas la clase POJO, Dao, repository y Database

--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/turquoise"
-    tools:context=".model.CreateActivity">
+    tools:context=".ui.CreateActivity">
 
     <Spinner
         android:id="@+id/spCreateType"
