--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/turquoise"
-    tools:context=".LoginActivity">
+    tools:context=".ui.LoginActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
