--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -90,7 +90,7 @@
                 app:srcCompat="@android:drawable/ic_delete" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/ivItemSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
