--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.profile.ProfileFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvProfile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
